--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,7 +23,14 @@ set(VERSION_MAJOR 0 CACHE STRING "Project major version number.")
 set(VERSION_MINOR 1 CACHE STRING "Project minor version number.")
 set(VERSION_PATCH 0 CACHE STRING "Project patch version number.")
 
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/${STM32_PROJ_FOLDER}/cubemx/Core/Inc ${CMAKE_CURRENT_SOURCE_DIR}/${STM32_PROJ_FOLDER}/cubemx/Middlewares/Third_Party/FreeRTOS/Source/include ${CMAKE_CURRENT_SOURCE_DIR}/${STM32_PROJ_FOLDER}/cubemx/Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 ${CMAKE_CURRENT_SOURCE_DIR}/${STM32_PROJ_FOLDER}/cubemx/Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F)
+include_directories(
+    ${CMAKE_CURRENT_SOURCE_DIR}/${STM32_PROJ_FOLDER}/cubemx/Core/Inc 
+    ${CMAKE_CURRENT_SOURCE_DIR}/${STM32_PROJ_FOLDER}/cubemx/Middlewares/Third_Party/FreeRTOS/Source/include 
+    ${CMAKE_CURRENT_SOURCE_DIR}/${STM32_PROJ_FOLDER}/cubemx/Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 
+    ${CMAKE_CURRENT_SOURCE_DIR}/${STM32_PROJ_FOLDER}/cubemx/Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F
+    # ${CMAKE_CURRENT_SOURCE_DIR}/${STM32_PROJ_FOLDER}/app/ST7789
+    ${CMAKE_CURRENT_SOURCE_DIR}/${STM32_PROJ_FOLDER}/app/ssd1306
+    )
 if(USE_SYSTEM_VIEW)
 add_definitions("-DENABLE_SYSTEMVIEW")
 endif()
@@ -44,6 +51,7 @@ set(CUBEMX_SRC
     ${STM32_PROJ_FOLDER}/cubemx/Core/Src/gpio.c
     ${STM32_PROJ_FOLDER}/cubemx/Core/Src/main.c
     ${STM32_PROJ_FOLDER}/cubemx/Core/Src/spi.c
+    ${STM32_PROJ_FOLDER}/cubemx/Core/Src/dma.c
     ${STM32_PROJ_FOLDER}/cubemx/Core/Src/stm32h7xx_it.c
     ${STM32_PROJ_FOLDER}/cubemx/Core/Src/stm32h7xx_hal_msp.c
     ${STM32_PROJ_FOLDER}/cubemx/Core/Src/system_stm32h7xx.c
@@ -63,12 +71,29 @@ set(CUBEMX_SRC
     ${STM32_PROJ_FOLDER}/cubemx/Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F/port.c
 )
 
-add_executable(${ELF_TARGET} ${CUBEMX_SRC})
+# drivers generated source files
+set(DRIVERS_SRC
+    # ${STM32_PROJ_FOLDER}/app/ST7789/fonts.c
+    # ${STM32_PROJ_FOLDER}/app/ST7789/st7789.c
+    ${STM32_PROJ_FOLDER}/app/ssd1306/ssd1306_fonts.c
+    ${STM32_PROJ_FOLDER}/app/ssd1306/ssd1306_tests.c
+    ${STM32_PROJ_FOLDER}/app/ssd1306/ssd1306.c
+)
+
+add_executable(${ELF_TARGET} ${CUBEMX_SRC} ${DRIVERS_SRC})
 target_compile_definitions(${ELF_TARGET} PUBLIC -D${MCU_FAMILY})
 target_link_libraries(${ELF_TARGET} PUBLIC cmsis stm32h7xx_hal -lc -lm -lnosys)
 target_link_libraries(${ELF_TARGET} PRIVATE -T${LINKER_SCRIPT} ${EXTRA_LINK_FLAGS})
+
 target_include_directories(${ELF_TARGET} PUBLIC
-  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/cubemx/Core/Inc ${CMAKE_CURRENT_SOURCE_DIR}/cubemx/Middlewares/Third_Party/FreeRTOS/Source/include ${CMAKE_CURRENT_SOURCE_DIR}/cubemx/Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 ${CMAKE_CURRENT_SOURCE_DIR}/cubemx/Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F>)
+    $<BUILD_INTERFACE:
+    ${CMAKE_CURRENT_SOURCE_DIR}/cubemx/Core/Inc 
+    ${CMAKE_CURRENT_SOURCE_DIR}/cubemx/Middlewares/Third_Party/FreeRTOS/Source/include 
+    ${CMAKE_CURRENT_SOURCE_DIR}/cubemx/Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 
+    ${CMAKE_CURRENT_SOURCE_DIR}/cubemx/Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F 
+    # ${CMAKE_CURRENT_SOURCE_DIR}/app/ST7789
+    ${CMAKE_CURRENT_SOURCE_DIR}/app/ssd1306>
+)
 
 ## add post-build targets
 include(${STM32_CMAKE_DIR}/cmake/stm32-gcc-postbuild.cmake)
